1. Separate business code 2.psqlURL is changed to obtain environment variables and delete config.json
